src/components/hero/hero.module.css
.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  width: max-content;
  justify-content: center;
  position: absolute;
  z-index: 1;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hero-text-desktop {
  display: none;
}

.hero-text-mobile {
  display: initial;
}

.trailsText {
  position: relative;
  width: 100%;
  height: 80px;
  line-height: 75px;
  font-size: 5em;
  font-weight: 800;
  letter-spacing: -0.05em;
  will-change: transform, opacity;
  overflow: hidden;
  color: "#fff";
}

.trailsText > div {
  padding-right: 0.05em;
  overflow: hidden;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.container label {
  font-size: 1.5rem;
  font-weight: 400;
  margin-right: 20px;
}

.sign-up {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.sign-up-label {
  margin: 1rem 0 1.25rem 0;
  display: inline-block;
  width: 300px;
}

.email-input {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
}

.sign-up-button {
  border: 1px solid #e5e5e5;
  padding: 0.25rem 1rem;
  font-size: 1rem;
  width: 130px;
}

.sign-up-button:hover {
  background: rgb(67 67 67 / 50%);
}

.sign-up input {
  padding: 1rem;
  margin-bottom: 1rem;
  font-size: 1rem;
  width: 100%;
  background-color: transparent;
}

.sign-up input::placeholder {
  color: #8b8b8b;
  opacity: 1; /* Firefox */
}

.sign-up input::-ms-input-placeholder {
  /* Edge 12-18 */
  color: #8b8b8b;
}

.we-will-be-in-touch {
  margin: 1rem 0 0 0;
  color: #76ff76;
}

.space-filler {
  height: 40px;
  width: 20px;
}

@media only screen and (min-width: 600px) {
  .hero {
    align-items: flex-start;
  }

  .trailsText {
    height: 100px;
    line-height: 85px;
    font-size: 6em;
  }
}

@media only screen and (min-width: 768px) {
  .email-input {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .sign-up {
    width: auto;
  }

  .sign-up-label {
    width: auto;
  }

  .email-input {
    width: auto;
  }

  .sign-up input {
    margin-right: 20px;
    margin-bottom: 0;
    padding: 1rem;
    width: 400px;
    font-size: 1rem;
    background-color: transparent;
  }

  .hero-text-desktop {
    display: initial;
  }

  .hero-text-mobile {
    display: none;
  }
}

